[package]
authors = ['Sunrise Protocol']
build = 'build.rs'
description = 'Sunrise Dawn Collator'
edition = '2018'
homepage = 'https://sunriseprotocol.com'
license = 'Apache 2.0'
name = 'dawn-collator'
repository = 'https://github.com/sunriseprotocol/sunrise'
version = '0.1.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'dawn-collator'

[dependencies]
derive_more = '0.99.11'
exit-future = '0.2.0'
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.13"
parking_lot = '0.11.1'
trie-root = '0.16.0'
codec = { package = 'parity-scale-codec', version = '2.0.0' }
structopt = "0.3.3"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
hex-literal = "0.3.1"

# Local dependencies
runtime-common = { path = "../../runtime/common" }
dawn-runtime = { path = "../../runtime/dawn", version = '0.1.0', optional = true}
rococo-parachain-primitives = { git = "https://github.com/paritytech/cumulus", default-features = false, branch="rococo-v1" }
exchange-rpc = {path = '../../pallets/exchange/rpc', version = '0.1.0'}
pallet-evm = { path = "../../pallets/evm" }
pallet-evm-rpc-runtime-api = { path = "../../pallets/evm/rpc/runtime_api" }

# Substrate dependencies
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", version = "0.9.0", branch = "rococo-v1" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

# RPC related dependencies
jsonrpc-core = "17.0.0"

# Cumulus dependencies
cumulus-client-consensus = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" } 
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" } 

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

[dev-dependencies]
assert_cmd = "1.0.3"
nix = "0.19.1"
##rand = "0.8.3"
tokio = { version = "1.2.0", features = ["macros"] }

# Polkadot dependencies
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-test-runtime = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-test-client = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }

# Substrate dependencies
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

[features]
default = ["std", "with-dawn-runtime"]
std = []
with-dawn-runtime = [
	"dawn-runtime",
]
with-ethereum-compatibility = [
	"dawn-runtime/with-ethereum-compatibility"
]