[package]
authors = ['Sunrise Protocol <https://github.com/sunriseprotocol>']
build = 'build.rs'
description = 'Sunrise Node'
edition = '2018'
homepage = 'https://sunriseprotocol.com'
license = 'Apache 2.0'
name = 'sunrise'
repository = 'https://github.com/sunriseprotocol/sunrise'
version = '0.1.0'

[[bin]]
name = 'sunrise'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.1'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'

# local dependencies
sunrise-runtime = { path = '../../runtime/sunrise', version = '0.1.0' }

# Substrate dependencies
sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "rococo-v1"}
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

[features]
default = []
runtime-benchmarks = ['sunrise-runtime/runtime-benchmarks']
