[package]
authors = ['Sunrise Protocol <https://github.com/sunriseprotocol>']
build = 'build.rs'
description = 'Sunrise Node'
edition = '2018'
homepage = 'https://sunriseprotocol.com'
license = 'Apache 2.0'
name = 'sunrise'
repository = 'https://github.com/sunriseprotocol/sunrise'
version = '0.1.0'

[[bin]]
name = 'sunrise'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.1'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'

# local dependencies
sunrise-runtime = { path = '../../runtime/sunrise', version = '0.1.0' }
primitives = { package = 'primitives', path = '../../primitives', version = '0.1.0'}


# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '0.8.1' }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1",features = ['wasmtime'], version = '0.8.1' }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '0.8.1' }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '0.8.1' }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", features = ['wasmtime'], version = '0.8.1'}
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '0.8.1' }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '0.8.1' }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1",features = ['wasmtime'], version = '0.8.1' }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }
sp-consensus  = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '0.8.1' }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '0.8.1' }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", version = '2.0.1' }

[features]
default = []
runtime-benchmarks = ['sunrise-runtime/runtime-benchmarks']
