[package]
authors = ['Sunrise Protocol <https://github.com/sunriseprotocol>']
build = 'build.rs'
description = 'Sunrise Node'
edition = '2018'
homepage = 'https://sunriseprotocol.com'
license = 'Apache 2.0'
name = 'sunrise'
repository = 'https://github.com/sunriseprotocol/sunrise'
version = '0.1.0'

[[bin]]
name = 'sunrise'


[build-dependencies]
substrate-build-script-utils = '3.0.0'

[dependencies]
futures = "0.3.4"
parity-util-mem = { version = "0.9.0", default-features = false, features = ["jemalloc-global"] }
jsonrpc-core = '15.1.0'
structopt = '0.3.21'
hex-literal = "0.3.1"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
codec = { package = "parity-scale-codec", version = "2.0.0" }

# local dependencies
runtime-common = { path = "../../runtime/common" }
sunrise-runtime = { path = '../../runtime/sunrise', version = '0.1.0' }
primitives = { package = 'sunrise-primitives', path = '../../primitives', version = '0.1.0'}
exchange-rpc = {path = '../../pallets/exchange/rpc', version = '0.1.0'}
pallet-evm = { path = "../../pallets/evm" }
pallet-evm-rpc-runtime-api = { path = "../../pallets/evm/rpc/runtime_api" }


# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", version = '0.9.0' , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-cli = { git = "https://github.com/paritytech/substrate",features = ['wasmtime'], version = '0.9.0' , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-client-api = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-consensus = { git = "https://github.com/paritytech/substrate", version = '0.9.0' , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", version = '0.9.0' , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ['wasmtime'], version = '0.9.0', rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-keystore = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", version = '0.9.0' , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-rpc = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", version = '0.9.0' , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-service = { git = "https://github.com/paritytech/substrate",features = ['wasmtime'], version = '0.9.0' , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }

sp-api = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-consensus  = { git = "https://github.com/paritytech/substrate", version = '0.9.0' , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", version = '0.9.0' , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-inherents = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }

[features]
default = []
runtime-benchmarks = ['sunrise-runtime/runtime-benchmarks']
