[package]
name = "pallet-currencies"
version = "0.1.0"
authors = ["Sunrise Protocol"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

pallet-evm = { path = "../evm", default-features = false }
pallet-evm-bridge = { path = "../evm-bridge", default-features = false }

orml-traits = { path = "../../orml/traits", default-features = false }
orml-utilities = { path = "../../orml/utilities", default-features = false }

primitives = { package = "primitives", path = "../../primitives", default-features = false }
support = { package = "pallet-support", path = "../support", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
tokens = { package = "orml-tokens", path = "../../orml/tokens" }
pallet-evm = { path = "../evm" }

clear_on_drop = { version = "0.2.4", features = ["no_cc"] }	# https://github.com/paritytech/substrate/issues/4179

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"pallet-evm-bridge/std",
	"orml-traits/std",
	"orml-utilities/std",
 	"primitives/std",
 	"support/std",
]
