[package]
name = "pallet-evm-accounts"
version = "0.1.0"
authors = ["Sunrise Prtocol"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
libsecp256k1 = { version = "0.3.4", default-features = false, features = ["hmac"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }

orml-traits = { path = "../../orml/traits", default-features = false }

primitives = { package = "sunrise-primitives", path = "../../primitives", default-features = false }
pallet-support = { path = "../support", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
orml-currencies = { path = "../../orml/currencies" }
orml-tokens = { path = "../../orml/tokens" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"libsecp256k1/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std",
	"orml-traits/std",
	"pallet-support/std",
]
