[package]
name = "srs-pallet-evm-bridge"
version = "0.1.0"
authors = ["Sunrise Protocol"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
primitive-types = { version = "0.9.0", default-features = false, features = ["rlp", "byteorder"] }
sha3 = { version = "0.8", default-features = false }
impl-trait-for-tuples = "0.1"
ethereum-types = { version = "0.11.0", default-features = false }
srs-primitives = { package = "srs-primitives", path = "../../primitives", default-features = false }
srs-pallet-support = { package = "srs-pallet-support", path = "../support", default-features = false }
srs-pallet-evm = { path = "../evm", default-features = false }
hex-literal = { version = "0.3.1" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-std/std",
	"sha3/std",
	"ethereum-types/std",
	"srs-primitives/std",
	"primitive-types/std",
	"srs-pallet-support/std",
	"srs-pallet-evm/std",
]
