[package]
name = 'pallet-exchange'
description = 'dex prototype'
repository = 'https://github.com/sunriseprotocol/sunrise'
authors = ['Sunrise']
version = '0.1.0'
edition = '2018'

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1",  default-features = false, version = '2.0.0' }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false, version = '2.0.0' }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1",  default-features = false, version = '2.0.0' }

orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "sw/rococo-v1", default-features = false, version = '0.4.0-dev' }
orml-utilities = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "sw/rococo-v1", default-features = false, version = '0.4.0-dev' }
pallet-tokens = {   default-features = false, path = "../tokens" }
primitives = { path = "../../primitives", version = "0.1.0", default-features=false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1",  default-features = false, version = '2.0.0' }


[features]
default = ['std']
std = [
	'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'orml-traits/std',
    'orml-utilities/std',
    'pallet-tokens/std',
]
