[package]
name = "srs-pallet-incentives"
version = "0.7.3"
authors = ["Sunrise Protocol"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
orml-rewards = { path = "../../orml/rewards", default-features = false }
srs-pallet-support = { package = "srs-pallet-support", path = "../support", default-features = false }
srs-primitives = { package = "srs-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
orml-tokens = { path = "../../orml/tokens", default-features = false }
orml-rewards = { path = "../../orml/rewards", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"orml-traits/std",
	"orml-rewards/std",
	"srs-pallet-support/std",
	"srs-primitives/std",
]
