[package]
name = "srs-pallet-nft"
version = "0.1.0"
authors = ["Sunrise Protocol"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
enumflags2 = { version = "0.6.3" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
srs-primitives = { package = "srs-primitives", path = "../../primitives", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
orml-nft = { path = "../../orml/nft", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
srs-pallet-currencies = { path = "../../pallets/currencies", default-features = false }
orml-tokens = { path = "../../orml/tokens", default-features = false }
srs-pallet-support = { package = "srs-pallet-support", path = "../../pallets/support" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"enumflags2/serde",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-proxy/std",
	"srs-primitives/std",
	"orml-traits/std",
	"orml-nft/std",
	"pallet-timestamp/std",
	"enumflags2/serde"
]
